2005-07-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/sine/gstsinesrc.c: (gst_sinesrc_class_init),
	(gst_sinesrc_init), (gst_sinesrc_create),
	(gst_sinesrc_set_property), (gst_sinesrc_get_property),
	(gst_sinesrc_start):
	* gst/sine/gstsinesrc.h:
	  removing num-buffers property before moving it

2005-07-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  use overridable ERROR_CFLAGS
	* docs/libs/gst-plugins-base-libs.types:
	* docs/libs/tmpl/gstringbuffer.sgml:
	* ext/alsa/gstalsasink.c: (gst_alsasink_get_type),
	(gst_alsasink_class_init):
	* ext/alsa/gstalsasrc.c: (gst_alsasrc_get_type),
	(gst_alsasrc_class_init):
	* gst-libs/gst/audio/audio.h:
	* gst-libs/gst/audio/gstaudioclock.h:
	* gst-libs/gst/audio/gstaudiofilter.c: (gst_audio_filter_get_type),
	(gst_audio_filter_base_init), (gst_audio_filter_class_init),
	(gst_audio_filter_link), (gst_audio_filter_init),
	(gst_audio_filter_chain), (gst_audio_filter_set_property),
	(gst_audio_filter_get_property),
	(gst_audio_filter_class_add_pad_templates):
	* gst-libs/gst/audio/gstaudiofilter.h:
	* gst-libs/gst/audio/gstaudiofiltertemplate.c:
	(gst_audio_filter_template_get_type),
	(gst_audio_filter_template_base_init),
	(gst_audio_filter_template_class_init),
	(gst_audio_filter_template_init),
	(gst_audio_filter_template_set_property),
	(gst_audio_filter_template_get_property), (plugin_init),
	(gst_audio_filter_template_setup),
	(gst_audio_filter_template_filter),
	(gst_audio_filter_template_filter_inplace):
	* gst-libs/gst/audio/gstaudiosink.c:
	(gst_audioringbuffer_get_type), (gst_audioringbuffer_class_init),
	(audioringbuffer_thread_func), (gst_audioringbuffer_acquire),
	(gst_audioringbuffer_release), (gst_audioringbuffer_start),
	(gst_audioringbuffer_stop), (gst_audioringbuffer_delay),
	(gst_audio_sink_base_init), (gst_audio_sink_class_init),
	(gst_audio_sink_init), (gst_audio_sink_create_ringbuffer):
	* gst-libs/gst/audio/gstaudiosink.h: