@@ -14,6 +14,9 @@ gstmixer
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT GstMixer ##### -->
 <para>
 
